[package]
name = "envsubst"
version = "0.1.2-alpha.0"
description = "Variables substitution"
license = "MIT/Apache-2.0"
keywords = ["envsubst", "varsubst"]
authors = ["Luca Bruno <lucab@debian.org>"]
repository = "https://github.com/lucab/envsubst-rs"
edition = "2018"
exclude = [
".gitignore",
".travis.yml",
]

[dependencies]
failure = "^0.1.5"

[package.metadata.release]
sign-commit = true
upload-doc = false
disable-publish = true
disable-push = true
pre-release-commit-message = "cargo: envsubst release {{version}}"
pro-release-commit-message = "cargo: development version bump"
tag-message = "envsubst {{version}}"
