[package]
name = "envsubst"
version = "0.2.1"
description = "Variables substitution"
license = "MIT/Apache-2.0"
keywords = ["envsubst", "varsubst"]
authors = ["Luca Bruno <lucab@lucabruno.net>"]
repository = "https://github.com/coreos/envsubst-rs"
edition = "2021"
exclude = [
".gitignore",
]

[dependencies]
thiserror = "^1.0"

[package.metadata.release]
sign-commit = true
publish = false
push = false
pre-release-commit-message = "cargo: envsubst release {{version}}"
post-release-commit-message = "cargo: development version bump"
tag-message = "envsubst {{version}}"
