[package]
name = "envsubst"
version = "0.2.1"
description = "Variables substitution"
license = "MIT OR Apache-2.0"
keywords = ["envsubst", "varsubst"]
authors = ["Luca Bruno <lucab@lucabruno.net>"]
repository = "https://github.com/coreos/envsubst-rs"
edition = "2021"
rust-version = "1.56.0"
exclude = [".gitignore", ".github"]

[dependencies]
thiserror = "^1.0"

[package.metadata.release]
sign-commit = true
sign-tag = true
publish = false
push = false
pre-release-commit-message = "cargo: envsubst release {{version}}"
tag-message = "envsubst {{version}}"
